--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
-@import url("https://cdn.pixabay.com/photo/2014/04/02/10/56/cloud-304979__480.png");
 @import url("https://www.citypng.com/public/uploads/small/11664660085zo9x5g6fbeuerq1il2ducfocjmgz2moerkrs95u3m59nncbckip4ipp4cxkkpjons43aj316vv7e8d31v4jc0b44fhtgvk510lpx.png");
 
 .app-main {
@@ -13,7 +12,7 @@
   -webkit-background-size: 500%;
   background-size: 500%;
   text-align: center;
-  top: 125px;
+  padding: 130px;
 }
 
 h1 {
