--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   -webkit-background-size: 500%;
   background-size: 500%;
   text-align: center;
-  padding: 130px;
+  padding: 10%;
 }
 
 h1 {
@@ -78,4 +78,9 @@ h3 {
   100%{
     background-position: 0 100%;
   }
+}
+
+.m-auto{
+  display: flex;
+  justify-content: center;
 }
